remove sun.misc.Unsafe