@@ -1,6 +1,6 @@
 package org.minimalj.model;
 
-import java.lang.reflect.Field;
+import java.lang.reflect.Constructor;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -16,37 +16,21 @@ import java.util.Set;
 import org.minimalj.util.LocaleContext;
 import org.minimalj.util.resources.Resources;
 
-
 public class EnumUtils {
 
-	@SuppressWarnings("unchecked")
+	@SuppressWarnings({ "rawtypes", "unchecked", "restriction" })
 	public static <T extends Enum<T>> T createEnum(Class<T> clazz, String name) {
 		try {
-			// which one is better? This?
-			sun.misc.Unsafe unsafe = getUnsafe();
-			T e = (T) unsafe.allocateInstance(clazz);
-			
-			// or this? (this one doesn't work with cheerpj beta 3)
- 			// sun.reflect.ReflectionFactory f = sun.reflect.ReflectionFactory.getReflectionFactory();
-			// Constructor c = f.newConstructorForSerialization(clazz);
-			// T e = (T) c.newInstance();
-			
-			// in jdk9: replace this with VarHandle
-			unsafe.putObject(e, unsafe.objectFieldOffset(Enum.class.getDeclaredField("name")), name);
-			unsafe.putInt(e, unsafe.objectFieldOffset(Enum.class.getDeclaredField("ordinal")), Integer.MAX_VALUE);
-			
+			Constructor constructorToCall = Enum.class.getDeclaredConstructor(String.class, Integer.TYPE);
+			sun.reflect.ReflectionFactory f = sun.reflect.ReflectionFactory.getReflectionFactory();
+			Constructor c = f.newConstructorForSerialization(clazz, constructorToCall);
+			T e = (T) c.newInstance(name, Integer.MAX_VALUE);
 			return e;
 		} catch (Exception x) {
 			throw new RuntimeException(x);
-		} 
+		}
 	}
-	
-	private static sun.misc.Unsafe getUnsafe() throws IllegalArgumentException, IllegalAccessException, NoSuchFieldException, SecurityException {
-		Field singleoneInstanceField = sun.misc.Unsafe.class.getDeclaredField("theUnsafe");
-		singleoneInstanceField.setAccessible(true);
-		return (sun.misc.Unsafe) singleoneInstanceField.get(null);
-	}
-	
+
 	public static <T extends Enum<T>> List<T> valueList(Class<T> enumClass) {
 		try {
 			Method method = enumClass.getMethod("values");
@@ -66,22 +50,22 @@ public class EnumUtils {
 	public static <T extends Enum<T>> String getDescription(T enumElement) {
 		return getText(enumElement, true);
 	}
-	
+
 	private enum EnumTextCache {
 		instance;
-		
+
 		public Map<Locale, Map<Object, String>> cacheText = Collections.synchronizedMap(new HashMap<>());
 		public Map<Locale, Map<Object, String>> cacheDescription = Collections.synchronizedMap(new HashMap<>());
-		
+
 		public <T extends Enum<T>> String get(T enumElement, boolean description) {
 			Map<Locale, Map<Object, String>> cache = description ? cacheDescription : cacheText;
 			Map<Object, String> cacheByLocale = cache.computeIfAbsent(LocaleContext.getCurrent(), l -> Collections.synchronizedMap(new HashMap<>()));
 			return cacheByLocale.computeIfAbsent(enumElement, e -> getText(enumElement, description));
 		}
-		
+
 		private static <T extends Enum<T>> String getText(T enumElement, boolean description) {
 			String name = enumElement.name();
-			
+
 			String bundleName = enumElement.getClass().getName();
 			while (true) {
 				try {
@@ -89,11 +73,12 @@ public class EnumUtils {
 					return resourceBundle.getString(name);
 				} catch (MissingResourceException mre) {
 					int pos = bundleName.lastIndexOf('$');
-					if (pos < 0) break;
+					if (pos < 0)
+						break;
 					bundleName = bundleName.substring(0, pos);
 				}
 			}
-			
+
 			String resourceName = enumElement.getClass().getName() + "." + name;
 			if (Resources.isAvailable(resourceName)) {
 				return Resources.getString(resourceName);
@@ -114,14 +99,14 @@ public class EnumUtils {
 		if (enumElement == null) {
 			return null;
 		}
-		
+
 		if (enumElement instanceof Rendering) {
 			String text = description ? Rendering.toDescriptionString(enumElement) : Rendering.toString(enumElement);
 			if (text != null) {
 				return text;
 			}
 		}
-		
+
 		return EnumTextCache.instance.get(enumElement, description);
 	}
 
@@ -134,11 +119,11 @@ public class EnumUtils {
 		if (!itemLists.containsKey(enumClass)) {
 			List<T> values = valueList(enumClass);
 			List<CodeItem<T>> itemList = itemList(values);
-			itemLists.put(enumClass, itemList);	
+			itemLists.put(enumClass, itemList);
 		}
 		return (List<CodeItem<T>>) itemLists.get(enumClass);
 	}
-	
+
 	public static <T extends Enum<T>> List<CodeItem<T>> itemList(List<T> values) {
 		List<CodeItem<T>> itemList = new ArrayList<>(values.size());
 		for (T value : values) {
@@ -147,7 +132,7 @@ public class EnumUtils {
 		}
 		return itemList;
 	}
-	
+
 	@SuppressWarnings({ "rawtypes", "unchecked" })
 	public static int getInt(Set set) {
 		if (set.isEmpty()) {
@@ -166,7 +151,7 @@ public class EnumUtils {
 			return result;
 		}
 	}
-	
+
 	@SuppressWarnings({ "rawtypes", "unchecked" })
 	public static void fillSet(int integer, Class enumClass, Set set) {
 		List values = EnumUtils.valueList(enumClass);
@@ -178,5 +163,5 @@ public class EnumUtils {
 			bitValue = bitValue << 1;
 		}
 	}
-	
+
 }
